Revision history for Perl extension Cache::KyotoTycoon

0.07

        - fixed documentation issue.

0.06

        - [INCOMPATIBLE CHANGE] TSVRPC::Client->call() is no longer returns status_line
        - micro optimization around curl.

0.05

        - better error message on TSVRPC::Client.

0.04

        - default encoding for TSVRPC is Base64.
        - added benchmark code.
        - fixed docs

0.03

        - [INCOMPATIBLE CHANGE] TSVRPC::Client->call() now returns plain array instead of TSVRPC::Response for better performance.
        - remove fucking unused code.

0.02

        - change namespace to Cache::KyotoTycoon

0.01    Fri Oct  8 19:18:17 2010
        - original version