@@ -1,5 +1,15 @@
 Revision history for Perl extension Cache::KyotoTycoon
 
+X.XX
+
+        - switch WWW::Curl::Easy to Furl.
+          Because Furl is ...
+            better interface
+            fast enough
+            portable
+            not requires external library
+            run with pure perl
+
 0.07
 
         - fixed documentation issue.
